--- a/source/_posts/我的第一篇文章.md
+++ b/source/_posts/我的第一篇文章.md
@@ -2,6 +2,8 @@
 title: 我的第一篇文章
 date: 2023-01-18 22:26:58
 tags:
+categories:
+- 杂谈
 ---
 
 欢迎来到我的博客，这是一个基于[Hexo](https://hexo.io/)搭建的网站，使用的主题是[Fluid](https://hexo.fluid-dev.com/docs/)
