换上了二次元主题

--- a/source/_posts/2023-01-18-我的第一篇文章.md
+++ b/source/_posts/2023-01-18-我的第一篇文章.md
@@ -6,7 +6,7 @@ categories:
 - 杂谈
 ---
 
-欢迎来到我的博客，这是一个基于[Hexo](https://hexo.io/)搭建的网站，使用的主题是[Fluid](https://hexo.fluid-dev.com/docs/)
+欢迎来到我的博客，这是一个基于[Hexo](https://hexo.io/)搭建的网站，使用的主题是[Kratos-Rebirth](https://github.com/Candinya/Kratos-Rebirth)
 
 # 自我介绍
 
