--- a/source/_posts/欢迎来到我的博客.md
+++ b/source/_posts/欢迎来到我的博客.md
@@ -14,7 +14,7 @@ categories:
 
 # 为什么想搭建博客？
 
-我对IT感兴趣是从很早之前开始的，但我很长一段时间都是一个使用者而不是一个创造者。那时候的我，并没有自己搭建博客的想法。
+我对IT感兴趣是从很早之前开始的，但我很长一段时间都是一个使用者而不是一个开发者。那时候的我，并没有自己搭建博客的想法。
 
 我偶尔会在b站专栏发文章（发某些快餐技术文章），但是b站专栏并不好用，不支持md语法，复制带着尾巴，没有暗黑模式......使用体验太糟糕了。
 
