--- a/source/_posts/欢迎来到我的博客.md
+++ b/source/_posts/欢迎来到我的博客.md
@@ -6,22 +6,18 @@ categories:
 - 杂谈
 ---
 
-欢迎来到我的博客，这是一个基于[Hexo](https://hexo.io/)搭建的网站，使用的主题是[Kratos-Rebirth](https://github.com/Candinya/Kratos-Rebirth)
+欢迎来到我的博客，这是基于[Hexo框架](https://hexo.io/zh-cn/)搭建的，使用的主题是[Kratos-Rebirth](https://github.com/Candinya/Kratos-Rebirth)
 
 # 自我介绍
 
-我是一名热爱编程的菜鸟学生，目前只对C，Python，HTML，CSS，Javascript的语法有基本的了解，但我会积极地学习的。
+我是一个学生，目前还在打基础的路上，对C，Python，Javascript的语法有基本的了解，只学习了hexo框架。
 
 # 为什么想搭建博客？
 
-我对IT感兴趣是从很早之前开始的，但我很长一段时间都是一个使用者而不是一个开发者。那时候的我，并没有自己搭建博客的想法。
+我对IT感兴趣是从很早之前开始的，但我很长一段时间都是一个使用者而不是一个开发者。那时候的我，并没有自己搭建博客的想法。我偶尔会在b站专栏发快餐技术类的文章，但是b站专栏不支持md语法，用户复制文本还带着尾巴，甚至整个b站网页都没有暗黑模式......使用体验太糟糕了。
 
-我偶尔会在b站专栏发文章（发某些快餐技术文章），但是b站专栏并不好用，不支持md语法，复制带着尾巴，没有暗黑模式......使用体验太糟糕了。
-
-在我学习前端技术的时候，我看到了很多让我眼前一亮的博客，让我很心动。既然这样，那我索性自己弄一个博客来写文章好了！
-
-然后我就开始了解web开发的相关内容，我的博客就出来了。
+在我学习前端技术的时候，我看到了很多让我眼前一亮的博客，让我很心动。既然这样，那我索性自己弄一个博客来写文章好了！我找到了github page和hexo，搭建了我的博客。
 
 # 将来的打算
 
-除了web开发，我也想接触其他的技术，感兴趣的有很多。但我并不打算看得太远，走一步看一步，慢慢来。
+除了前端开发，我感兴趣的技术还有很多。但我并不想对未来做太多计划，充满变化的人生非常吸引我。
