--- a/source/_posts/欢迎来到我的博客.md
+++ b/source/_posts/欢迎来到我的博客.md
@@ -6,11 +6,11 @@ categories:
 - 杂谈
 ---
 
-欢迎来到我的博客，这是基于[Hexo框架](https://hexo.io/zh-cn/)搭建的，使用的主题是[Kratos-Rebirth](https://github.com/Candinya/Kratos-Rebirth)
+欢迎来到我的博客，这是基于[Hexo框架](https://hexo.io/zh-cn/)搭建的博客，使用的主题是[Kratos-Rebirth](https://github.com/Candinya/Kratos-Rebirth)
 
 # 自我介绍
 
-我是一个学生，目前还在打基础的路上，对C，Python，Javascript的语法有基本的了解，只学习了hexo框架。
+我是一个普通学生，技术不是特别高，心态也很平，不喜欢插脚乱七八糟的事，但对于自己还是很认真的。
 
 # 为什么想搭建博客？
 
@@ -20,4 +20,4 @@ categories:
 
 # 将来的打算
 
-除了前端开发，我感兴趣的技术还有很多。但我并不想对未来做太多计划，充满变化的人生非常吸引我。
+除了前端开发，我感兴趣的技术还有很多，我自己也会时不时进行一些尝试。但我并不会对未来做太具体的计划，我喜欢充满变化的人生。
