--- a/source/_posts/技巧/快捷方式跳转网页.md
+++ b/source/_posts/技巧/快捷方式跳转网页.md
@@ -6,7 +6,7 @@ tags:
  - windows
 categories:
  - 技巧
-# pic: '/assets/blogcovers/快捷方式跳转网页.webp'
+pic: '/assets/blogcovers/快捷方式跳转网页.webp'
 ---
 
 # 三种方法
