--- a/source/_posts/技巧/修改此电脑的预设文件夹.md
+++ b/source/_posts/技巧/修改此电脑的预设文件夹.md
@@ -10,7 +10,7 @@ date: 2023-09-12 21:06:25
 
 win+R 输入`regedit`打开注册表编辑器
 
-定位到`HKEY_LOCAL_MACHINE＼SOFTWARE＼Microsoft＼Windows＼CurrentVersion＼Explorer＼FolderDescriptions `
+定位到`HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\FolderDescriptions`
 
 在此项下会看到很多用花括号括起的长字符串，我们需要在其中找到六个项，它们分别对应前面提高的六个文件夹
 
