--- a/source/_posts/技巧/修改此电脑的预设文件夹.md
+++ b/source/_posts/技巧/修改此电脑的预设文件夹.md
@@ -6,6 +6,7 @@ categories:
 tags:
   - windows
 date: 2023-09-12 21:06:25
+pic: /assets/blogcovers/修改此电脑的预设文件夹.webp
 ---
 
 win+R 输入`regedit`打开注册表编辑器
