--- a/source/_posts/技巧/删除百度网盘我的应用数据文件夹.md
+++ b/source/_posts/技巧/删除百度网盘我的应用数据文件夹.md
@@ -5,7 +5,7 @@ categories:
   - 技巧
 tags:
   - windows
-  - 百度网盘
+  - 应用程序
 pic: /assets/blogcovers/删除百度网盘我的应用数据文件夹.webp
 date: 2023-10-09 13:06:12
 ---
